completed HTML exercises

--- a/01-html/03-table.html
+++ b/01-html/03-table.html
@@ -17,7 +17,37 @@
   <body>
     <main>
       <table>
-        <!-- Add your code here -->
+        <thread>
+          <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+          </tr>
+        </thread>
+        <tbody>
+          <tr>
+            <td>Spongebob</td>
+            <td>Squarepants</td>
+            <td>spongebob@Squarepants.com</td>
+          </tr>
+          <tr>
+            <td>Patrick</td>
+            <td>Star</td>
+            <td>patrick@Squarepants.com</td>
+          </tr>
+          <tr>
+            <td>Sandy</td>
+            <td>Cheeks</td>
+            <td>sandy@Squarepants.com</td>
+          </tr>
+          <tr>
+            <td colspan="2" rowspan="2">Mr. Krabs</td>
+            <td>mrkrabs@squarepants.com</td>
+          </tr>
+          <tr>
+            <td>mrk@Squarepants.com</td>
+          </tr>
+        </tbody>
       </table>
     </main>
   </body>
